<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.udacity.project4.domain.entity.ReminderEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.reminderDescription.view.ReminderDescriptionActivity">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_7sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_logo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/remindTitleContainer"
                    style="@style/TextInputLayout"
                    android:hint="@string/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/remindTitleEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="none"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="70"
                        android:singleLine="true"
                        android:enabled="false"
                        android:focusable="false"
                        android:clickable="false"
                        android:text="@={model.title}"
                        android:textAlignment="viewStart"
                        android:textColor="@color/purple_500"
                        android:textSize="16sp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/remindDescriptionContainer"
                    style="@style/TextInputLayout"
                    android:hint="@string/description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/remindDescriptionEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:lines="6"
                        android:enabled="false"
                        android:focusable="false"
                        android:clickable="false"
                        android:maxLength="1000"
                        android:overScrollMode="always"
                        android:scrollbarSize="@dimen/_2sdp"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:scrollHorizontally="true"
                        android:text="@={model.description}"
                        android:textAlignment="viewStart"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    app:cardCornerRadius="@dimen/_7sdp"
                    app:strokeColor="@color/gray"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_37sdp"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:drawablePadding="@dimen/_5sdp"
                            android:focusable="false"
                            android:text="@{model.address}"
                            android:textColor="@color/purple_500"
                            app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintBottom_toTopOf="@+id/materialButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>


        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>