...
    <string name="try_again">try again</string>

    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="dropped_pin">Dropped Pin</string>


    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="reminder_saved">Reminder Saved Successfully</string>


</resources>
