...
                        android:textAlignment="viewStart"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:id="@+id/cardViewAddress"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    app:cardCornerRadius="@dimen/_7sdp"
                    android:onClick="@{() -> fragment.onPickLocationClick()}"
                    app:strokeColor="@color/gray"
...

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSaveRemind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_9sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/TemplateGreen"
                    android:insetTop="0sp"
...
