...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                android:onClick="@{() -> fragment.onAddRemindClicked()}"
                android:layout_margin="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
...
